--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin>
     <id>classifieds</id>
     <name>Classified Ads</name>
-    <description>Classified Ads</description>
+    <description>Classified Ads plugin for glFusion.</description>
     <version>1.0.7</version>
     <glfusionversion>1.4.0</glfusionversion>
     <phpversion>5.3.0</phpversion>
