--- a/plugin.xml
+++ b/plugin.xml
@@ -7,5 +7,5 @@
     <phpversion>5.6.0</phpversion>
     <url>http://www.leegarner.com</url>
     <maintainer>Lee Garner</maintainer>
-    <requires>lglib</requires>
+    <requires>lglib,1.05</requires>
 </plugin>
